# sorttea-monorepo

./: .gitignore  README.md
.github/workflows/: README.md  deploy-to-caprover.yml  deploy-to-prd.yml
backend/: Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  setup.sh
backend/sorttea/: __init__.py  asgi.py  auth.py  celery.py  settings.py  urls.py  wsgi.py
backend/sorttea/accounts/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/sorttea/accounts/migrations/: 0001_initial.py  0002_userprofile_auth_provider_and_more.py  0003_userprofile_auth_token.py  0004_userprofile_provider_image_url.py
backend/sorttea/analytics/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/sorttea/analytics/management/commands/: generate_analytics.py
backend/sorttea/analytics/migrations/: 0001_initial.py
backend/sorttea/giveaway/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/sorttea/giveaway/migrations/: 0001_initial.py
backend/sorttea/instagram/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/sorttea/instagram/migrations/: 0001_initial.py
docs/architecture/: overview.md
docs/development/: getting-started.md
frontend/: .env.local.example  .eslintignore  DEVELOPMENT.md  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/scripts/: inject-git-version.js
scripts/: setup.sh
(+54 files in other folders)
